--- a/api-spec/STAC-standalone.yaml
+++ b/api-spec/STAC-standalone.yaml
@@ -31,7 +31,7 @@ paths:
         - STAC
       parameters:
       - $ref: '#/components/parameters/bbox'
-      - $ref: '#/components/parameters/time'
+      - $ref: '#/components/parameters/timeRange'
       - $ref: '#/components/parameters/limit'
       responses:
         '200':
@@ -110,16 +110,18 @@ components:
     bbox:
       name: bbox
       in: query
-      description: >
+      description: |
         Only features that have a geometry that intersects the bounding box are
-        selected. The bounding box is provided as four or six numbers, depending
-        on whether the coordinate reference system includes a vertical axis
-        (elevation or depth):
+        selected. The bounding box is provided as four or six numbers,
+        depending on whether the coordinate reference system includes a
+        vertical axis (elevation or depth):
 
-        * Lower left corner, coordinate axis 1 * Lower left corner, coordinate
-        axis 2 * Lower left corner, coordinate axis 3 (optional) * Upper right
-        corner, coordinate axis 1 * Upper right corner, coordinate axis 2 *
-        Upper right corner, coordinate axis 3 (optional)
+        * Lower left corner, coordinate axis 1
+        * Lower left corner, coordinate axis 2  
+        * Lower left corner, coordinate axis 3 (optional) 
+        * Upper right corner, coordinate axis 1 
+        * Upper right corner, coordinate axis 2 
+        * Upper right corner, coordinate axis 3 (optional)
 
         The coordinate reference system of the values is WGS84
         longitude/latitude (http://www.opengis.net/def/crs/OGC/1.3/CRS84) unless
@@ -131,6 +133,7 @@ components:
         latitude. However, in cases where the box spans the antimeridian the
         first value (west-most box edge) is larger than the third value
         (east-most box edge).
+
 
         If a feature has multiple spatial geometry properties, it is the
         decision of the server whether only a single spatial geometry property
@@ -144,17 +147,12 @@ components:
           type: number
       style: form
       explode: false
-    time:
+    timeRange:
       name: time
       in: query
       description: >-
-        Either a date-time or a period string that adheres to RFC 3339.
-        Examples:
-
-        * A date-time: "2018-02-12T23:20:50Z" * A period:
-        "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z" or
-        "2018-02-12T00:00:00Z/P1M6DT12H31M12S"
-
+        A time range search that accepts a JSON search object.
+        
         Only features that have a temporal property that intersects the value of
         `time` are selected.
 
@@ -163,8 +161,7 @@ components:
         extent or all relevant temporal properties.
       required: false
       schema:
-        type: string
-      style: form
+        $ref: '#/components/schemas/timeRange'
       explode: false
     collectionId:
       name: collectionId
@@ -429,4 +426,4 @@ components:
             http://api.cool-sat.com/query/gasd312fsaeg/ANsXtp9mrqN0yrKWhf-y2PUpHRLQb1GT-mtxNcXou8TwkXhi1Jbk
 tags:
   - name: STAC
-    description: 'Extension to WFS3 Core to support STAC metadata model and search API    '
+    description: 'Extension to WFS3 Core to support STAC metadata model and search API'
