updates to contact, to be a little more stac-y

--- a/api-spec/WFS3core+STAC.yaml
+++ b/api-spec/WFS3core+STAC.yaml
@@ -7,16 +7,16 @@ info:
     that also implements the OGC Web Feature Service 3.0 specification (conformance 
     classes: "STAC", "Core", "GeoJSON", "HTML", "OpenAPI 3.0").
   contact:
-    name: Acme Corporation
-    email: info@example.org
-    url: 'http://example.org/'
+    name: Cool Sat Corp
+    email: info@cool-sat.com
+    url: 'http://cool-sat.com/contact/'
   license:
     name: CC-BY 4.0 license
     url: 'https://creativecommons.org/licenses/by/4.0/'
 servers:
-  - url: 'https://dev.example.org/'
+  - url: 'http://dev.cool-sat.com/'
     description: Development server
-  - url: 'https://data.example.org/'
+  - url: 'http://www.cool-sat.com'
     description: Production server
 paths:
   /:
