Features/time interval (#96)
* Switching time ranges to use period syntax

This matches what WFS is using as well as incorporating an extension into the core

* updating yaml docs

--- a/api-spec/STAC-fragment.yaml
+++ b/api-spec/STAC-fragment.yaml
@@ -125,17 +125,18 @@ components:
       name: time
       in: query
       description: >-
-        A time range search that accepts a JSON search object.
-        
+        Either a date-time or a period string that adheres to RFC3339. Examples:
+        * A date-time: "2018-02-12T23:20:50Z"
+        * A period: "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z" or "2018-02-12T00:00:00Z/P1M6DT12H31M12S"
         Only features that have a temporal property that intersects the value of
         `time` are selected.
-
         If a feature has multiple temporal properties, it is the decision of the
-        server whether only a single temporal property is used to determine the
-        extent or all relevant temporal properties.
+        server whether only a single temporal property is used to determine
+        the extent or all relevant temporal properties.
       required: false
       schema:
-        $ref: '#/components/schemas/timeRange'
+        type: string
+      style: form
       explode: false
   schemas:
     searchBody:
@@ -151,9 +152,7 @@ components:
         - 39
         - -105
         - 41
-        time:
-          gt: "2018-03-15T00:00:00.000Z"
-          lt: "2018-06-01T00:00:00.000Z"
+        time: "2018-03-15T00:00:00.000Z"
     bboxFilter:
       type: object
       description: Only return items that intersect the provided bounding box.
@@ -165,7 +164,7 @@ components:
       type: object
       properties:
         time:
-          $ref: '#/components/schemas/timeRange'
+          $ref: '#/components/parameters/time'
     intersectsFilter:
       type: object
       description: Only returns items that intersect with the provided polygon.
@@ -221,17 +220,6 @@ components:
       description: >-
         A single date-time string that adheres to RFC3339, for example
         1985-04-12T23:20:50.52Z
-    timeRange:
-      type: object
-      properties:
-        gt:
-          $ref: '#/components/schemas/time'
-        lt:
-          $ref: '#/components/schemas/time'
-        gte:
-          $ref: '#/components/schemas/time'
-        lte:
-          $ref: '#/components/schemas/time'
     itemCollection:
       type: object
       required:
