--- a/api-spec/STAC-standalone.yaml
+++ b/api-spec/STAC-standalone.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 info:
   title: The SpatioTemporal Asset Catalog API (standalone)
-  version: 0.4.1
+  version: 0.5.1
   description: >-
     This is an OpenAPI definition of the core SpatioTemporal Asset Catalog API
     specification. Any service that implements this endpoint to allow search of
@@ -398,9 +398,17 @@ components:
         properties:
           $ref: '#/components/schemas/itemProperties'
         links:
-          type: array
-          items:
-            $ref: '#/components/schemas/link'
+          type: object
+          additionalProperties:
+            type: object
+            required:
+              - href
+              - rel
+            properties:
+              href:
+                type: string
+              rel:
+                type: string
         assets:
           type: object
           additionalProperties:
@@ -438,7 +446,8 @@ components:
           provider: 'http://www.cool-sat.com'
           license: CC-BY-4.0
         links:
-          - rel: self
+          self:
+            rel: self
             href: >-
               http://cool-sat.com/catalog/collections/cs/items/CS3-20160503_132130_04.json
         assets:
