Fixing #146. Changing dateTime to date-time and url to uri to fix JSON schema.

--- a/api-spec/STAC-standalone.yaml
+++ b/api-spec/STAC-standalone.yaml
@@ -474,7 +474,7 @@ components:
       properties:
         next:
           type: string
-          format: url
+          format: uri
           description: >-
             A URL to obtain the next paginated data set. If not present, the
             client should utilize the `nextPageToken`.
