--- a/api-spec/WFS3core+STAC.yaml
+++ b/api-spec/WFS3core+STAC.yaml
@@ -522,7 +522,7 @@ components:
           maxItems: 2
           items:
             type: string
-            format: dateTime
+            format: date-time
           example:
             - '2011-11-11T12:22:11Z'
             - '2012-11-24T12:32:43Z'
@@ -825,7 +825,7 @@ components:
       properties:
         next:
           type: string
-          format: url
+          format: uri
           description: >-
             A URL to obtain the next paginated data set. If not present, the
             client should utilize the `nextPageToken`.
