--- a/api-spec/STAC-fragment.yaml
+++ b/api-spec/STAC-fragment.yaml
@@ -345,7 +345,7 @@ components:
       properties:
         next:
           type: string
-          format: url
+          format: uri
           description: >-
             A URL to obtain the next paginated data set. If not present, the
             client should utilize the `nextPageToken`.
