--- a/api-spec/STAC-fragment.yaml
+++ b/api-spec/STAC-fragment.yaml
@@ -1,5 +1,18 @@
 paths:
-  /search/stac:
+  /stac:
+    get:
+      summary: >-
+        Return a catalog definition json
+      tags:
+        - STAC
+      responses:
+        '200':
+          description: A catalog json definition. Used as an entry point for a crawler.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/catalogDefinition'
+  /stac/search:
     get:
       summary: >-
         retrieve items matching filters. Intended as a shorthand API for simple queries.
