Revert "removing swagger2 and updating to /stac/search"
This reverts commit 7e96e76b988c198e54abad5c8c69137d96827a42.

--- a/api-spec/STAC+QueryFilter.yaml
+++ b/api-spec/STAC+QueryFilter.yaml
@@ -21,20 +21,7 @@ servers:
   - url: 'http://www.cool-sat.com'
     description: Production server
 paths:
-  /stac:
-    get:
-      summary: >-
-        Return a catalog definition json
-      tags:
-        - STAC
-      responses:
-        '200':
-          description: A catalog json definition. Used as an entry point for a crawler.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/catalogDefinition'
-  /stac/search:
+  /search/stac:
     get:
       summary: >-
         retrieve items matching filters. Intended as a shorthand API for simple
